test_suite/tests/compile-fail/macros/sm/empty.rs
#[macro_use]
extern crate sm_macro;

sm!{}
//~^ ERROR unexpected end of macro invocation

fn main() {}
